--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 </head>
 <body>
     <h1>my first website for 2nd time</h1>
-    <h1>successfully pushed the file in github</h1>
+    <input type="text" name="" id="">
+    <br>
+    <button>Click me</button>
 </body>
 </html>
